objects/Sacrament__c.object
<CustomObject>
    <description>Summary list of sacraments related to the donor/contact/family member.</description>
    <label>Sacrament</label>
    <nameField>
        <label>Sacrament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sacraments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church__c</fullName>
        <label>Church</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status if it is completed.</description>
        <label>Status - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sacrament__c</fullName>
        <label>Sacrament Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sacrament</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_Place__c</fullName>
        <label>Church/Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>St. James Parish</fullName>
                    <default>true</default>
                    <label>St. James Parish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performed_By__c</fullName>
        <label>Performed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marriage_Type__c</fullName>
        <inlineHelpText>The Roman Catholic canonical status of the marriage.</inlineHelpText>
        <label>Marriage Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sacrament__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Marriage_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_and_State__c</fullName>
        <label>City and State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Marriage__c</fullName>
        <inlineHelpText>Date is available only for Sacrament type Marriage</inlineHelpText>
        <label>Date of Marriage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Godparent_Sponsor__c</fullName>
        <inlineHelpText>Adult sponsor/godparent names can be recorded here.</inlineHelpText>
        <label>Godparent/Sponsor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_on_File__c</fullName>
        <inlineHelpText>If a hard copy official certificate is on file in parish records, check this box to indicate that. Leave blank for unknown.</inlineHelpText>
        <label>Certificate on File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                    <default>true</default>
                    <label>Unverified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Failed Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sacrament_Taken_Name__c</fullName>
        <label>Sacrament Taken Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Contact_Parishioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor/Contact/Parishioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sacraments</relationshipLabel>
        <relationshipName>Sacraments</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>OnlyVisibleForMarriage</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL( Sacrament__c , &apos;Marriage&apos;))</errorConditionFormula>
        <errorDisplayField>Date_of_Marriage__c</errorDisplayField>
        <errorMessage>Marriage Date is available only for Marriage Type Sacrament</errorMessage>
    </validationRules>
</CustomObject>